--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -13,11 +13,11 @@
                         </div>
                         <div>
                           <ul>
-                           
+
                             <li>
                                 <div class="dbox w-100 text-center">
                                     <div class="icon">
-                                       
+
 
 <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 viewBox="0 0 502.001 502.001" style="enable-background:new 0 0 502.001 502.001;" xml:space="preserve">
@@ -82,7 +82,7 @@
                                             <path d="M27.362,16.547c9.14,0,16.575,7.436,16.575,16.575c0,0.553,0.447,1,1,1s1-0.447,1-1c0-10.242-8.333-18.575-18.575-18.575
                                               c-0.553,0-1,0.447-1,1S26.809,16.547,27.362,16.547z"/>
                                           </g>
-                                          
+
                                         </svg>
                                     </div>
                                     <div class="text pl-3 py-2">
@@ -124,7 +124,7 @@
                                             </g>
                                           </g>
                                         </g>
-                                        
+
                                       </svg>
                                     </div>
                                     <div class="text pl-3 py-2">
@@ -143,38 +143,38 @@
                         <div class = "text-center">
                           <h3>Get in Touch</h3>
                         </div>
-                        <form>
+                        <form (ngSubmit)="onSubmit()" [formGroup]="contactform">
                             <div class="form-group py-3">
                               <label class="form-label">First Name</label>
-                              <input type="text" class="form-control" placeholder="Rosy" name = "firstname">
+                              <input type="text" class="form-control" placeholder="Rosy" formControlName="firstname">
                             </div>
                             <div class="form-group py-3">
                               <label for="exampleFormControlInput2" class="form-label">Last Name</label>
-                              <input type="text" class="form-control" name = "lastname" placeholder = "Smith">
+                              <input type="text" class="form-control" formControlName="lastname" placeholder = "Smith">
                             </div>
                             <div class="form-group py-3">
                               <label class="form-label">Email</label>
-                              <input type="email" class="form-control" name = "email"   aria-describedby="emailHelp" placeholder="rosysmith@gmail.com">
+                              <input type="email" class="form-control" formControlName="email"   aria-describedby="emailHelp" placeholder="rosysmith@gmail.com">
                             </div>
                             <div class="form-group py-3">
                               <label class="form-label">Mobile Number</label>
-                              <input type="text" class="form-control" placeholder="1234567890" >
+                              <input type="text" class="form-control" placeholder="1234567890" formControlName="mobilenumber">
                             </div>
                             <div class="form-group py-3">
                               <label class="form-label">Message</label>
-                              <textarea class="form-control"  name = "textarea" placeholder = "Type your message here!" rows="3" ></textarea>
+                              <textarea class="form-control"  name = "textarea" placeholder = "Type your message here!" rows="3" formControlName="message"></textarea>
                             </div>
                             <div class = "text-center pt-4">
-                              <button type = "submit" class  = "btn blue-btn mt-4" id="button-addon2">Send a Massage</button>
+                              <button type="submit" class="btn blue-btn mt-4" id="button-addon2" [disabled]="!contactform.valid">Send a Massage</button>
                             </div>
                             </form>
-                        
+
                       </div>
                 </div>
         </div>
         </div>
     </div>
-   
-  
+
+
 </section>
 
