--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -179,8 +179,8 @@
       </div>
       <div class  = "col-lg-6 col-12">
         <div class ="row">
-          <div class = "col-lg-6 col-md-6 col-12">
-            <a href  = "#">
+          <div class = "col-lg-6 col-md-6 col-12" *ngFor="let product of featureProduct">
+            <a [routerLink]="['/product-detail', product.id]">
               <div class="card">
                 <hr class = "section_hr">
                 <div class = "card_img">
@@ -188,52 +188,7 @@
                 </div>
                 <hr class = "section_hr">
                 <div class="card-body text-center">
-                  <h5 class="card-title mb-0">$80.00
-                  </h5>
-                </div>
-              </div>
-            </a>
-          </div>
-          <div class = "col-lg-6 col-md-6 col-12">
-            <a href  = "#">
-              <div class="card">
-                <hr class = "section_hr">
-                <div class = "card_img">
-                  <img src="assets/img/collection2.jpg" class="card-img-top" alt="...">
-                </div>
-                <hr class = "section_hr">
-                <div class="card-body text-center">
-                  <h5 class="card-title mb-0">$90.00
-                  </h5>
-                </div>
-              </div>
-            </a>
-          </div>
-          <div class = "col-lg-6 col-md-6 col-12 pt-4">
-            <a href  = "#">
-              <div class="card">
-                <hr class = "section_hr">
-                <div class = "card_img">
-                  <img src="assets/img/collection3.jpg" class="card-img-top" alt="...">
-                </div>
-                <hr class = "section_hr">
-                <div class="card-body text-center">
-                  <h5 class="card-title mb-0">$70.00
-                  </h5>
-                </div>
-              </div>
-            </a>
-          </div>
-          <div class = "col-lg-6 col-md-6 col-12 pt-4">
-            <a href  = "#">
-              <div class="card">
-                <hr class = "section_hr">
-                <div class = "card_img">
-                  <img src="assets/img/collection4.jpg" class="card-img-top" alt="...">
-                </div>
-                <hr class = "section_hr">
-                <div class="card-body text-center">
-                  <h5 class="card-title mb-0">$85.00
+                  <h5 class="card-title mb-0">€{{product.price}}
                   </h5>
                 </div>
               </div>
