--- a/src/app/page/our-process/our-process.component.html
+++ b/src/app/page/our-process/our-process.component.html
@@ -1,7 +1,7 @@
 <!---------- Our Process Banner Start---------------->
 <section id = "process-banner">
     <video autoplay muted loop id="myVideo" width="100%">
-        <source src="assets/video/our-process.mp4" type="video/mp4" width = >  
+        <source src="assets/video/our-process.mp4" type="video/mp4" width = >
     </video>
     <div class = "banner-content">
         <h1>10,000 Years of Tradition.</h1>
@@ -14,8 +14,8 @@
 <section class = "process-section">
     <div class ="container">
         <div class = "box text-center">
-             <h2>Handwoven in the Atlas Mountains. Step inside a tradition older than Morocco itself.</h2>
-            
+             <h2>{{page.singletitle1}}</h2>
+
         </div>
     </div>
 </section>
@@ -27,16 +27,16 @@
        <div class = "row">
            <div class = "col-lg-6 col-12">
              <div class = "col1">
-                 <h1>1.</h1>
-                 <h3>A shepherd tends a flock of sheep in the Atlas Mountains. In the summer, the flock is sheared of its winter wool. It can take 50-100 coats to make a standard sized rug.</h3>
+                 <h1>{{page.rugsproducttitle1}}</h1>
+                 <h3>{{page.rugsproductbuttonname1}}</h3>
              </div>
            </div>
            <div class = "col-lg-6 col-12">
                <div class = "box">
-                   <img src = "assets/img/our-process/process1.jpg" alt = "img">
+                   <img src = "{{page.rugsproductproductimage1}}" alt = "img">
                </div>
           </div>
-       </div>  
+       </div>
     </div>
   </section>
 <!-----------Our Process Section2 Ends------------->
@@ -47,15 +47,15 @@
        <div class = "row flex-column-reverse flex-lg-row flex-md-row">
         <div class = "col-lg-6 col-12">
              <div class = "box">
-                <img src = "assets/img/our-process/process2.jpg" alt = "img">
+                <img src = "{{page.processproductimage2}}" alt = "img">
              </div>
         </div>
         <div class = "col-lg-6 col-12">
           <div class = "col2">
-              <h1>2.</h1>
-              <h3>The wool is bundled and sent to be thoroughly washed.</h3>
+              <h1>{{page.processtitle2}}</h1>
+              <h3>{{page.processbuttonname2}}</h3>
           </div>
-        </div>  
+        </div>
     </div>
     </div>
   </section>
@@ -65,8 +65,7 @@
 <section class = "process-section">
     <div class ="container">
         <div class = "box text-center">
-             <h2>The wool dries in
-                the summer sun.</h2>       
+             <h2>{{page.singletitle2}}</h2>
         </div>
     </div>
 </section>
@@ -78,16 +77,16 @@
        <div class = "row">
            <div class = "col-lg-6 col-12">
              <div class = "col1">
-                 <h1>3.</h1>
-                 <h3>After washing, the wool is spun and turned into threads.</h3>
+                 <h1>{{page.processtitle3}}</h1>
+                 <h3>{{page.processbuttonname3}}</h3>
              </div>
            </div>
            <div class = "col-lg-6 col-12">
                <div class = "box">
-                   <img src = "assets/img/our-process/process1.jpg" alt = "img">
+                   <img src = "{{page.processproductimage3}}" alt = "img">
                </div>
           </div>
-       </div>  
+       </div>
     </div>
   </section>
 <!-----------Our Process Section5 Ends------------->
@@ -98,15 +97,15 @@
        <div class = "row flex-column-reverse flex-lg-row flex-md-row">
         <div class = "col-lg-6 col-12">
              <div class = "box">
-                <img src = "assets/img/our-process/process2.jpg" alt = "img">
+                <img src = "{{page.processproductimage4}}" alt = "img">
              </div>
         </div>
         <div class = "col-lg-6 col-12">
           <div class = "col2">
-              <h1>4.</h1>
-              <h3>Now, the yarn is either left as its natural creamy color, or dyed and then returned to the studio.</h3>
+              <h1>{{page.processtitle4}}</h1>
+              <h3>{{page.processbuttonname4}}</h3>
           </div>
-        </div>  
+        </div>
     </div>
     </div>
   </section>
@@ -116,7 +115,7 @@
 <section class = "process-section">
     <div class ="container">
         <div class = "box text-center">
-             <h2>The new yarn is strung onto looms.</h2>       
+             <h2>{{page.singletitle3}}</h2>
         </div>
     </div>
 </section>
@@ -128,17 +127,17 @@
        <div class = "row">
            <div class = "col-lg-6 col-12">
              <div class = "col1">
-                 <h1>5.</h1>
-                 
-                <h3>The women begin the long process of weaving a design. Each woman (sometimes working with a partner) works on a rug from start to finish. This can take well over a month of tying knots.</h3>
+                 <h1>{{page.processtitle5}}</h1>
+
+                <h3>{{page.processbuttonname5}}</h3>
              </div>
            </div>
            <div class = "col-lg-6 col-12">
                <div class = "box">
-                   <img src = "assets/img/our-process/process1.jpg" alt = "img">
+                   <img src = "{{page.processproductimage5}}" alt = "img">
                </div>
           </div>
-       </div>  
+       </div>
     </div>
   </section>
 <!-----------Our Process Section5 Ends------------->
@@ -149,15 +148,15 @@
        <div class = "row flex-column-reverse flex-lg-row flex-md-row">
         <div class = "col-lg-6 col-12">
              <div class ="box">
-                <img src = "assets/img/our-process/process2.jpg" alt = "img">
+                <img src = "{{page.processproductimage6}}" alt = "img">
              </div>
         </div>
         <div class = "col-lg-6 col-12">
           <div class = "col2">
-              <h1>6.</h1>
-              <h3>The finished rugs are then doused with water, scrubbed clean, and draped over wooden racks where they’ll dry in the mountain air.</h3>
+              <h1>{{page.processtitle6}}</h1>
+              <h3>{{page.processbuttonname6}}</h3>
           </div>
-        </div>  
+        </div>
     </div>
     </div>
   </section>
