--- a/src/app/page/visit-us/the-apartment/the-apartment.component.html
+++ b/src/app/page/visit-us/the-apartment/the-apartment.component.html
@@ -4,7 +4,7 @@
       <div class = "text-center">
         <h1 class = "mb-0 text-light">The Apartment, NYC</h1>
         <h6 class = "mb-0 text-light">Beni in a brownstone. Let’s meet by the fireplace to chat rug design, review color and construction samples, and answer any questions.</h6>
-        <button type = "button" class= "btn black-btn" data-bs-toggle="modal" data-bs-target="#requestModal">Request Appointment</button>  
+        <button type = "button" class= "btn black-btn" data-bs-toggle="modal" data-bs-target="#requestModal">Request Appointment</button>
     </div>
     </div>
 </section>
@@ -15,8 +15,8 @@
 <section id = "apartment-section1" class = "inner_sec1">
     <div class = "container">
       <div class = "text-center box">
-        <h2 class = "mb-4">Bringing Morocco to the city.</h2>
-        <p>We’re excited to welcome you to our first US-based showroom, designed by ongoing collaborator Colin King. The apartment is located in a historic brownstone in the West Village of Manhattan, and will showcase a rotating installation of our handwoven knotted and flat weave creations.</p>  
+        <h2 class = "mb-4">{{page.bringingmoroccotitle}}</h2>
+        <p>{{page.bringingmoroccodescripation}}</p>
     </div>
     </div>
 </section>
@@ -34,11 +34,11 @@
         </div>
        <div class = "col-lg-6 col-12 ">
           <div class = "col2 text-start">
-              <h2 class = "text-capitalize">It’s in the details</h2>
-              <p>King worked with us to incorporate our Moroccan roots into the design, including a centrally-placed handcrafted pendant light handmade in Marrakech, and shelves scattered with ceramics and objects sourced through local potters and artisans.</p>
+              <h2 class = "text-capitalize">{{page.detailstitle}}</h2>
+              <p>{{page.detailsdescriaption}}</p>
           </div>
        </div>
-       
+
      </div>
     </div>
 </section>
@@ -50,8 +50,8 @@
      <div class = "row">
        <div class = "col-lg-6 col-12">
         <div class = "col2 text-lg-end text-start">
-            <h2 class = "text-capitalize">A Leafy Tree</h2>
-            <p>A leafy tree placed in the apartment’s original, leaded glass bay windows echoes the ancient olive tree at the center of the Beni Morocco Studio. Vintage finds throughout the space reflect the team’s deep appreciation of global design and craftsmanship.</p>
+            <h2 class = "text-capitalize">{{page.leafytitle}}</h2>
+            <p>{{page.leafydescriaption}}</p>
         </div>
      </div>
      <div class = "col-lg-6 col-12">
@@ -68,8 +68,8 @@
 <section id = "apartment-section4">
     <div class = "container">
      <div class = "text-center">
-        <h3>“When we designed the space, we leaned into the feeling of a collected home. The visuals at play instantly feel both old and new — a balance so beautifully echoed by the weavers and the designs that Beni creates.”</h3>
-        <h6>Colin King</h6>
+        <h3>{{page.onlydescriaption}}</h3>
+        <h6>{{page.onlytitle}}</h6>
     </div>
     </div>
 </section>
@@ -81,8 +81,8 @@
      <div class = "row">
        <div class = "col-lg-6 col-12 ">
         <div class = "col2">
-            <h2>What to expect</h2>
-            <p>Seasonal rug installations, curated by the Beni creative team and styled by King, will highlight new designs and patterns, and our collaboration collections. Larger scale color samples in every in-stock shade will be stacked and ready to peruse. To-go sample packs will allow visitors to visualize our exclusive color palette and feel the quality of our handcrafted rugs.</p>
+            <h2>{{page.expecttitle}}</h2>
+            <p>{{page.expectdescriaption}}</p>
         </div>
      </div>
      <div class = "col-lg-6 col-12">
@@ -98,7 +98,7 @@
 <hr class = "section_hr">
 <!----------------(Apartment-section7 Start)-------------->
 <section id = "apartment-section6">
-  
+
 </section>
 <!----------------(Apartment-section7 End)---------------->
 <hr class = "section_hr">
@@ -109,15 +109,15 @@
      <div class = "row">
      <div class = "col-lg-6 col-12">
         <div class = "visit-img1">
-          
+
             <img src = "assets/img/visit/studio-banner1.jpg" width="100%">
         </div>
     </div>
     <div class = "col-lg-6 col-12">
         <div class = "col2">
-            <h2>Visit Us in Marrakech</h2>
-            <p>Rug shopping, reimagined. Witness how Moroccan rugs are woven and washed, design your own, and top it all off with an espresso (or rosé) from our Milan-inspired bar.</p>
-           <button type = "button" class = "btn blue-btn" routerLink = "/visit/studio">Explore the Studio</button>
+            <h2>{{page.marrakechtitle}}</h2>
+            <p>{{page.marrakechdescripation}}</p>
+           <button type = "button" class = "btn blue-btn" routerLink = "/visit/studio">{{page.marrakechbuttonname}}</button>
         </div>
      </div>
      </div>
@@ -197,15 +197,15 @@
                         <button type = "submit" class="btn blue-btn">Send Enquiry</button>
                     </div>
                 </form>
-                
+
             </div>
-           
+
         </div>
         <div class = "text-center p-2">
             <p class = "mb-1">
                 If you have any questions, email us at<br> <a href = "#">nyc@benirugs.com</a> or <a href = "#">marrakech@benirugs.com.</a>
             </p>
-        </div>  
+        </div>
       </div>
     </div>
   </div>
