--- a/src/app/page/visit-us/the-studio/the-studio.component.html
+++ b/src/app/page/visit-us/the-studio/the-studio.component.html
@@ -4,7 +4,7 @@
       <div class = "text-center">
         <h1 class = "mb-0 text-light text-capitalize">The Studio, Marrakech</h1>
         <h6 class = " mb-0 text-light">Rug shopping, reimagined. Witness how Moroccan rugs are woven and washed, design your own, and top it all off with an espresso (or rosé) from our Milan-inspired bar.</h6>
-        <button type = "button" class= "btn black-btn" data-bs-toggle="modal" data-bs-target="#requestModal">Request Appointment</button>  
+        <button type = "button" class= "btn black-btn" data-bs-toggle="modal" data-bs-target="#requestModal">Request Appointment</button>
     </div>
     </div>
 </section>
@@ -15,8 +15,8 @@
 <section id = "studio-section1" class = "inner_sec1">
     <div class = "container">
       <div class = "text-center box">
-        <h2 class = "mb-4 text-capitalize">The Beni Experience.</h2>
-        <p>Two years after launching this digital home of Beni Rugs, we broke ground on an 8,000 square foot studio in Tameslouht, Morocco. The studio - which houses our design HQ, rug showroom, and our team of incredible Berber women who weave the brand’s creations - is situated on the Route to Amizmiz, an emerging design enclave twenty minutes south of the bustling city of Marrakech.</p>  
+        <h2 class = "mb-4 text-capitalize">{{page.beniexperiencetitle}}</h2>
+        <p [innerHTML]="page.beniexperiencedescripation"></p>
     </div>
     </div>
 </section>
@@ -28,8 +28,8 @@
      <div class = "row">
        <div class = "col-lg-6 col-12 ">
           <div class = "col1 text-lg-end text-start">
-              <h2 class = "text-capitalize">A new way to shop</h2>
-              <p>The studio aims to modernize the traditional set-up of shopping handcrafted Moroccan rugs within the city’s markets. Here, our rugs are displayed on sleek modular rack systems, and an immense selection of yarns and color swatches inspire customization.</p>
+              <h2 class = "text-capitalize">{{page.newwayshoptitle}}</h2>
+              <p>{{page.newwayshopdescriaption}}</p>
           </div>
        </div>
        <div class = "col-lg-6 col-12">
@@ -46,15 +46,15 @@
 <section id = "studio-section3">
     <div class = "container">
         <div class = "text-center">
-           <h2 class="text-capitalize" >What to Expect</h2>
+           <h2 class="text-capitalize" >{{page.newwayshopmaintitle}}</h2>
         </div>
         <div class  ="row pt-4">
             <div class = "col-lg-3 col-md-6 col-sm-6 col-12">
                 <div class="card">
                     <img src="assets/img/visit/sec3-card1.jpg" width = "100%" alt="img" class="img-responsive">
                     <div class="content p-2">
-                        <h6 class = "text-light">We’ll provide the ride</h6>
-                        <p class = "text-light">Private transfer from Marrakech to the studio is available, where guests are greeted by the team and given a personal tour.</p>
+                        <h6 class = "text-light">{{page.newwayshoptitle1}}</h6>
+                        <p class = "text-light">{{page.newwayshopdescriaption1}}</p>
                     </div>
                 </div>
             </div>
@@ -62,8 +62,8 @@
                 <div class="card">
                     <img src="assets/img/visit/sec3-card2.jpg" width = "100%" alt="img" class="img-responsive">
                     <div class="content p-2">
-                        <h6 class = "text-light">See our looms in action.</h6>
-                        <p class = "text-light">An open air courtyard that’s centered around a 150 year old olive tree allows for a full view of the 50+ looms at work.</p>
+                        <h6 class = "text-light">{{page.newwayshoptitle2}}</h6>
+                        <p class = "text-light">{{page.newwayshopdescriaption2}}</p>
                     </div>
                 </div>
             </div>
@@ -71,8 +71,8 @@
                 <div class="card">
                     <img src="assets/img/visit/sec3-card3.jpg" width = "100%" alt="img" class="img-responsive">
                     <div class="content p-2">
-                        <h6 class = "text-light">Discover the craft of Morocco.</h6>
-                        <p class = "text-light">Enjoy an espresso at the bar while browsing pieces from local artisans and artists alongside our favorite Morocco-based brands.</p>
+                        <h6 class = "text-light">{{page.newwayshoptitle3}}</h6>
+                        <p class = "text-light">{{page.newwayshopdescriaption3}}</p>
                     </div>
                 </div>
             </div>
@@ -80,11 +80,11 @@
                 <div class="card">
                     <img src="assets/img/visit/sec3-card4.jpg" width = "100%" alt="img" class="img-responsive">
                     <div class="content p-2">
-                        <h6 class = "text-light">Design your perfect rug with us.</h6>
-                        <p class = "text-light">Feel the difference for yourself. Explore our construction types, review color samples, and pick your perfect design.</p>
+                        <h6 class = "text-light">{{page.newwayshoptitle4}}</h6>
+                        <p class = "text-light">{{page.newwayshopdescriaption4}}</p>
                     </div>
                 </div>
-            </div> 
+            </div>
           </div>
     </div>
 </section>
@@ -102,8 +102,8 @@
        </div>
        <div class = "col-lg-6 col-12 ">
         <div class = "col2">
-            <h2 class = "text-capitalize">Our team</h2>
-            <p>The Beni weaving team is compensated with above market rates alongside benefits such as childcare and transportation to work. We are proud to support and protect this ancient craft while evolving the compensation model for weavers in Morocco.</p>
+            <h2 class = "text-capitalize">{{page.ourteamtitle}}</h2>
+            <p>{{page.ourteamdescripation}}</p>
         </div>
      </div>
      </div>
@@ -117,11 +117,11 @@
 <section id = "studio-section5">
     <div class = "container">
      <div class = "row">
-     
+
        <div class = "col-lg-6 col-12">
         <div class = "col1 text-lg-end text-start">
-            <h2 class = "text-capitalize">The operation</h2>
-            <p>After each rug is finished on the loom, it’s washed and dried up to 5 times. Normally, this process is quite water-intensive. The Studio employs a water recapture system to ensure that as much water is collected, filtered, and reused as possible to minimize our environmental footprint.</p>
+            <h2 class = "text-capitalize">{{page.operationtitle}}</h2>
+            <p>{{page.operationdescripation}}</p>
         </div>
      </div>
      <div class = "col-lg-6 col-12">
@@ -139,7 +139,7 @@
     <div class = "container">
      <div class = "text-center">
         <h3>“We want visitors to browse unhurriedly, get inspired, and enjoy an espresso from our Milan-inspired bar.”</h3>
-        <img src = "assets/img/visit/signature.png"> 
+        <img src = "assets/img/visit/signature.png">
     </div>
     </div>
 </section>
@@ -263,9 +263,9 @@
     </div>
     <div class = "col-lg-6 col-12 ">
         <div class = "col2">
-            <h2 class = "text-capitalize">Visit Us in NYC</h2>
-            <p class = "pt-3">Beni in a brownstone. Let’s meet by the fireplace to chat rug design, review color and construction samples, and answer any questions.</p>
-           <button type = "button" class = "btn blue-btn" routerLink = "/visit/apartment">Explore the Apartment</button>
+            <h2 class = "text-capitalize">{{page.nyctitle}}</h2>
+            <p class = "pt-3">{{page.nycdescripation}}</p>
+           <button type = "button" class = "btn blue-btn" routerLink = "/visit/apartment">{{page.nycbuttonname}}</button>
         </div>
      </div>
      </div>
@@ -345,15 +345,15 @@
                       <button type = "submit" class="btn blue-btn">Send Enquiry</button>
                   </div>
               </form>
-              
+
           </div>
-         
+
       </div>
       <div class = "text-center p-2">
           <p class = "mb-1">
               If you have any questions, email us at<br> <a href = "#">nyc@benirugs.com</a> or <a href = "#">marrakech@benirugs.com.</a>
           </p>
-      </div>  
+      </div>
     </div>
   </div>
 </div>
