--- a/src/app/page/thankyou/thankyou.component.html
+++ b/src/app/page/thankyou/thankyou.component.html
@@ -37,7 +37,7 @@
                 <hr>
          <li class="d-flex justify-content-between py-2">
                 <p class="mb-0">Subtotal</p>
-                <p class="mb-0"><span>${{order.product_amount}}</span></p>
+                <p class="mb-0"><span>€{{order.product_amount}}</span></p>
             </li>
             <hr>
             <li class = "d-flex justify-content-between py-2">
