--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -5,7 +5,7 @@
         <div class = "col-lg-3 col-md-6  col-12">
           <div>
             <h4>About Us</h4>
-            <p class = "mb-0 pt-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In auctor egestas purus, at pharetra urna. Aliquam commodo eu justo in iaculis. Nulla facilisi. </p>
+            <p class = "mb-0 pt-2" innerHTML="{{information.footeraboutdescripation}}"></p>
           </div>
         </div>
         <div class = "col-lg-3 col-md-6 col-12">
@@ -18,7 +18,7 @@
               <li class = "nav-item">
                 <a href = "#" class = "nav-link">Home</a>
               </li>
-              <li class = "nav-item"> 
+              <li class = "nav-item">
                 <a routerLink = "/visit/studio" class = "nav-link">The Studio, Marrakech</a>
               </li>
               <li  class = "nav-item">
@@ -37,7 +37,7 @@
               <li class = "nav-item">
                 <a routerLink = "/contact" class = "nav-link">Contact Us</a>
               </li>
-              
+
             </ul>
           </div>
         </div>
@@ -97,7 +97,7 @@
                   c0-14.118-11.486-25.604-25.604-25.604c-0.553,0-1,0.447-1,1S26.809,9.517,27.362,9.517z"></path><path _ngcontent-iev-c64="" d="M27.362,16.547c9.14,0,16.575,7.436,16.575,16.575c0,0.553,0.447,1,1,1s1-0.447,1-1c0-10.242-8.333-18.575-18.575-18.575
                   c-0.553,0-1,0.447-1,1S26.809,16.547,27.362,16.547z"></path></g>
                 </svg>
-                +1234567890
+                {{information.footercompanynumber}}
               </h6>
               <h6>
                 <svg _ngcontent-xxc-c64="" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 502.001 502.001" xml:space="preserve" style="enable-background: new 0 0 502.001 502.001;"><g _ngcontent-xxc-c64=""><g _ngcontent-xxc-c64=""><g _ngcontent-xxc-c64=""><path _ngcontent-xxc-c64="" d="M497.78,196.909L256.83,24.03c-3.484-2.5-8.175-2.5-11.659,0L4.22,196.909C1.595,198.731,0,201.889,0,205.07v264.694
@@ -111,7 +111,7 @@
                   C258.372,338.08,257.482,336.839,257.203,336.45z"></path><path _ngcontent-xxc-c64="" d="M293.148,215.07h23.776c5.523,0,10-4.477,10-10s-4.477-10-10-10h-23.776c-5.523,0-10,4.477-10,10
                   S287.625,215.07,293.148,215.07z"></path></g></g></g>
                 </svg>
-                lorem123@gmail.com
+                {{information.footercompanyemail}}
               </h6>
             </div>
           </div>
