--- a/src/app/page/gift-card/gift-card.component.html
+++ b/src/app/page/gift-card/gift-card.component.html
@@ -13,21 +13,19 @@
                   <h2>Gift Card</h2>
                 </div>
                 <div class = "pt-4">
-                  <p>Want to share the Beni love with someone you know? Give them the gift of a one-of-a-kind rug.</p>
-                  <p>Beni gift cards are delivered by email and contain instructions to redeem them at checkout. Our gift cards have no additional processing fees.</p>
-                  <p>For online use only.</p>
+                  <p innerHTML="{{page.swatchsedescripation}}"></p>
                 </div>
                 <div>
                   <!-----<button *ngFor = "let size of sizes" class = "btn" [style.background] = "size" (click) = "selectedSize = size" [ngClass]="{selected:selectedSize === size}" value = {{}}>{{size}}</button>  --->
-                   
+
                 </div>
                 <div>
-                  
+
                 </div>
                 <div class = "text-center pt-4 mt-4">
                     <button type = "button" class = "btn blue-btn">Add to Cart</button>
                 </div>
-  
+
               </div>
           </div>
       </div>
@@ -39,18 +37,18 @@
   <section id = "gift-section2">
       <div class = "container">
         <div class = "row">
-            
+
             <div class = "col-lg-5 col-12">
               <div class = "col1 text-center">
                   <div>
-                    <h2>Pick a Color</h2>
-                   <p>Every sample swatch also ships with a card of our in stock colors. If you have another shade in mind, just let us know!</p>
+                    <h2>{{page.pickcolorettitle1}}</h2>
+                   <p>{{page.pickcoloredescripation}}</p>
                   </div>
                 </div>
             </div>
             <div class = "col-lg-7 col-12">
               <div class = "img-container">
-               <img src = "assets/img/swatches/swatch1.png" alt = "img" width="100%" height="100%">
+               <img src = "{{page.pickcoloreimage}}" alt = "img" width="100%" height="100%">
               </div>
              </div>
         </div>
@@ -63,34 +61,34 @@
       <div class = "container">
         <div class = "row">
           <div class = "col-lg-3 col-12">
-  
+
           </div>
             <div class = "col-lg-6 col-12">
                <div class = "text-center">
-                   <h2>Knotted vs. Flat</h2>
-                   <p>Knotted rugs are sumptuous, warm, and incredibly soft underfoot. The pile for these rugs ranges from 1" - 1.5".  Flat rugs are the breezier, more casual cousin to full pile. A different weaving technique means these rugs keep a lower profile.</p>
+                   <h2>{{page.knottedflattitle}}</h2>
+                   <p innerHTML="{{page.knottedflatdescripation}}"></p>
                </div>
             </div>
             <div class = "col-lg-3 col-12">
-  
+
             </div>
             <div class = "col-lg-6 col-12 pt-">
-                <a routerLink = "/products" class = "box">
+                <a routerLink = "{{page.knottedflatbuttonlink1}}" class = "box">
                     <div>
                       <div class = "img-container pt-3">
-                        <img src = "assets/img/swatches/swatch2.jpg" alt = "img" width="100%" height="100%">
+                        <img src = "{{page.knottedflatimage1}}" alt = "img" width="100%" height="100%">
                       </div>
-                      <h6  class = "pt-2 mb-0">Knotted Weave</h6>
+                      <h6  class = "pt-2 mb-0">{{page.knottedflatbuttonname1}}</h6>
                     </div>
                    </a>
              </div>
              <div class = "col-lg-6 col-12">
-                <a routerLink = "/products" class = "box">
+                <a routerLink = "{{page.knottedflatbuttonlink2}}" class = "box">
                     <div>
                       <div class = "img-container pt-3">
-                        <img src = "assets/img/swatches/swatch3.jpg" alt = "img" width="100%" height="100%">
+                        <img src = "{{page.knottedflatimage2}}" alt = "img" width="100%" height="100%">
                       </div>
-                      <h6  class = "pt-2 mb-0">Flat Weave</h6>
+                      <h6  class = "pt-2 mb-0">{{page.knottedflatbuttonname2}}</h6>
                     </div>
                    </a>
              </div>
@@ -104,7 +102,7 @@
     <div class = "container">
       <div class = "row">
         <div class = "col-lg-3 col-12">
-  
+
         </div>
           <div class = "col-lg-6 col-12">
              <div class = "text-center">
@@ -113,8 +111,8 @@
              </div>
           </div>
           <div class = "col-lg-3 col-12">
-  
-          </div> 
+
+          </div>
       </div>
       <ngx-slick-carousel class="carousel"
       #slickModal="slick-carousel"
@@ -176,12 +174,11 @@
   <section class = "gift-section5">
     <div class = "container">
     <video autoplay muted loop id="myVideo" width="100%">
-        <source src="assets/video/our-process.mp4" type="video/mp4" width = >  
+        <source src="assets/video/our-process.mp4" type="video/mp4" width = >
     </video>
     <div class = "banner-content">
-        <h1 class = "text-light">10,000 Years of Tradition.</h1>
+        <h1 class = "text-light">{{page.videotitle}}</h1>
     </div>
-    </div> 
+    </div>
   </section>
   <!-----Section5 End----->
-  
