--- a/src/app/page/our-story/our-story.component.html
+++ b/src/app/page/our-story/our-story.component.html
@@ -2,7 +2,7 @@
 <section id = "story-banner">
     <div class = "container">
      <div class = "text-center">
-       <h1 class = "text-light">Our Story</h1>
+       <h1 class = "text-light">{{page.storymaintitle}}</h1>
      </div>
     </div>
    </section>
@@ -12,9 +12,9 @@
 <section id = "story-section1" class = "inner_sec1">
     <div class ="container">
         <div class = "box text-center">
-             <h2>Wo We Are</h2>
-             <p>Weaving together the ancient techniques of Berber heritage with a modern design perspective, we celebrate the magic of Moroccan rugs.</p>
-             <img src = "assets/img/our-story/signature.png" alt = "img">
+             <h2>{{page.wowearetitle1}}</h2>
+             <p>{{page.wowearedescripation}}</p>
+             <img src = "{{page.woweareimage}}" alt = "img">
         </div>
 
     </div>
@@ -27,19 +27,19 @@
        <div class = "row flex-column-reverse flex-lg-row flex-md-row">
          <div class = "col-lg-6 col-12">
              <div class = "card">
-                 <img src = "assets/img/our-story/story1.jpg" width="100%" alt = "img">
+                 <img src = "{{page.beginningimage}}" width="100%" alt = "img">
              </div>
          </div>
          <div class = "col-lg-6 col-12">
              <div class = "col2">
-                <h2>In the beginning</h2>
-                <p>We started Beni to celebrate the art of making Moroccan rugs by hand. We preserve the time-honored art of rug making while introducing endless customization options in the form of color, size, and design.</p>
-                <button type="button" class = "btn blue-btn" routerLink = "/products">Shop Rug</button> 
-            </div>    
+                <h2>{{page.beginningtitle}}</h2>
+                <p>{{page.beginningdescripation}}</p>
+                <button type="button" class = "btn blue-btn" routerLink = "{{page.beginningbuttonelink}}">{{page.beginningbuttonname}}</button>
+            </div>
          </div>
        </div>
     </div>
- 
+
 </section>
 <!--------------Our Story Section2 End------------->
 <hr class = "section_hr">
@@ -47,9 +47,9 @@
 <section id = "story-section3">
     <div class = "container">
         <div class = "box text-center">
-            <h2  class = "text-light">Forever inspired</h2>
-            <p  class = "text-light">We are inspired by natural materials, architecture, artistic expression and the colors and shapes of Morocco. The results are rugs that meld the ancient and the contemporary.</p>
-            <button type = "button" class = "btn blue-btn text-light" routerLink = "/products">Get Inspired</button>
+            <h2  class = "text-light">{{page.inspiredtitle1}}</h2>
+            <p  class = "text-light">{{page.inspireddescripation1}}</p>
+            <button type = "button" class = "btn blue-btn text-light" routerLink = "{{page.inspiredproductbuttonlink1}}">{{page.inspiredbuttonname1}}</button>
         </div>
     </div>
 </section>
@@ -61,20 +61,20 @@
        <div class = "row ">
         <div class = "col-lg-6 col-12">
             <div class = "col1">
-               <h2>Dedication to design</h2>
-               <p>Our designs take their cues from many sources, including natural forms, abstract paintings of the modern art movement, patterns in traditional zelig tile work, stunning landscapes of the Atlas Mountains.</p>
-               <button type="button" class = "btn blue-btn ms-0" routerLink = "/products">Shop Rug</button> 
-           </div>    
+               <h2>{{page.dedicationtitle2}}</h2>
+               <p>{{page.dedicationdescripation2}}</p>
+               <button type="button" class = "btn blue-btn ms-0" routerLink = "{{page.dedicationproductbuttonlink2}}">{{page.dedicationbuttonname2}}</button>
+           </div>
         </div>
          <div class = "col-lg-6 col-12">
              <div class = "col2 card">
-                 <img src = "assets/img/our-story/story5.jpg" width="100%" alt = "img">
+                 <img src = "{{page.dedicationproductimage2}}" width="100%" alt = "img">
              </div>
          </div>
-       
+
        </div>
     </div>
- 
+
 </section>
 <!--------------Our Story Section4 End------------->
 <hr class = "section_hr">
@@ -82,8 +82,8 @@
 <section id = "story-section5">
   <div class = "container">
       <div class = "box">
-          <h2>Supporting Community</h2>
-          <h5>We are dedicated to improving and evolving working conditions, benefits, wages and overall experience for our team members.</h5>
+          <h2>{{page.communitytitle}}</h2>
+          <h5>{{page.communitydesctipation}}</h5>
       </div>
   </div>
 </section>
